--- a/source/book_refs.bib
+++ b/source/book_refs.bib
@@ -7,3 +7,22 @@
   pages     = {141--146},
   note      = {蟹江 幸博 (訳)}
 }
+
+@inbook{Jimbo2024,
+  title     = {複素関数入門},
+  author    = {神保 道夫},
+  series    = {現代数学への入門 新装版},
+  publisher = {岩波書店},
+  year      = {2024},
+  month     = oct,
+  pages     = {97--99}
+}
+
+@inbook{Horiguchi2000,
+  title     = {応用数学講義},
+  author    = {堀口 剛 and 海老澤 丕道 and 福井 芳彦},
+  publisher = {培風館},
+  year      = {2000},
+  month     = mar,
+  pages     = {292--294}
+}
